# FinancialFileFetcher

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/FinancialFileFetcher/: FinancialFileFetcher.py  __init__.py
tests/: test_FinancialFileFetcher.py
